Доработанны тесты